vlib/v/checker/tests/string_escape_u32_err_b.vv
fn main() {
    println('\U345')
}
